deployment/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - name: api
        image: neovasudeva/snake-api
        imagePullPolicy: Always
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api-app
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
