deployment/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend
        image: neovasudeva/snake-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
