deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: snake-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/v1.0
        backend:
          serviceName: api
          servicePort: 5002
      - path: /
        backend:
          serviceName: frontend
          servicePort: 5000
